# the-goose-rust

./: Cargo.toml
benches/: bench.rs
core/src/: lib.rs
sample/: Cargo.toml
sample/benches/: bench.rs
sample/src/: lib.rs
src/: lib.rs  sample.rs
the-goose/: Cargo.toml
the-goose/src/: lib.rs
